- new method SCIPvarIsDeleted()
- new callback parameter "validnode" for the CONFLICTEXEC method of conflict handlers, which should be passed to
  SCIPaddConsNode()
- new method SCIPnodeGetNumber()
- new method SCIPsolveProbingLP() to solve the LP in a probing node (enables mixing of propagation and LP solving
  for diving heuristics)
- new method SCIProwGetDualfarkas()

plugins:
- added command "write solution" to default dialog
- changed restart dfs nodeselector to sort leaves by node number instead of node depth to aviod jumping around in the
  search tree after a restart was applied and the current dive ended due to infeasibility
- removed "objfeaspump" heuristic, because the functionality can be achieved by using the "feaspump" heuristic
- diving heuristics are now applying propagation after each bound change
- new primal heuristic "octane"
- slightly changed feaspump heuristic, s.t. after finding a new best solution the target integral solution is modified
  randomly
- new method SCIPgetDualfarkasLinear() of linear constraint handler
- new method SCIPgetDualfarkasLogicor() of logicor constraint handler
- new method SCIPgetDualfarkasSetppc() of setppc constraint handler
- new method SCIPgetDualsolKnapsack() of knapsack constraint handler
- new method SCIPgetDualfarkasKnapsack() of knapsack constraint handler
- new method SCIPgetDualsolVarbound() of varbound constraint handler
- new method SCIPgetDualfarkasVarbound() of varbound constraint handler

parameters:
- replaced parameter presolving/restartbdchgs with parameters presolving/maxrestarts and presolving/restartfac
- new parameter conflict/maxclauses
- new parameter conflict/allowlocal
- new parameter branching/fullstrong/reevalage
- changed default values of heuristics/*/maxdiveavgquot and heuristics/*/maxdiveavgquotnosol to 0

features:
- reactivated multiaggregation in cons_linear.c on binary variables again (possible due to bug fix below)
- introduced subversion string