@@ -21,6 +21,7 @@ interface:
 - new method SCIPsolveProbingLP() to solve the LP in a probing node (enables mixing of propagation and LP solving
   for diving heuristics)
 - new method SCIProwGetDualfarkas()
+- new method SCIPgetCurrentNode()
 
 plugins:
 - added command "write solution" to default dialog
